Add some comments

--- a/zmk/app/boards/arm/ble_90 (based zmk 3)/ble_90_defconfig
+++ b/zmk/app/boards/arm/ble_90 (based zmk 3)/ble_90_defconfig
@@ -1,5 +1,6 @@
 # SPDX-License-Identifier: MIT
 
+# 键盘显示名称
 CONFIG_ZMK_KEYBOARD_NAME="ble_90"
 
 CONFIG_SOC_SERIES_NRF52X=y
@@ -48,9 +49,11 @@ CONFIG_ZMK_RGB_UNDERGLOW_BRT_MAX=80
 # 去抖
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=10
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=10
+
+# USB COM log输出  
 # CONFIG_ZMK_USB_LOGGING=y
 
 # CONFIG_BT_DEVICE_APPEARANCE=961
 
-#实验性：需要从主机键入密钥以配对 BLE 连接
+# 键入PIN密钥以配对（zmk3已修复，可以使用）
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
